# swing_trading_agents

./: .gitignore  README.md  pyproject.toml
src/a_utils/: config_setup.py
src/b_provider_adapter/: README.md  call_llm.py  token_controller.py  token_tracker.py
src/c_data_acquisition/: web_search_llm.py
src/c_web_search/: makrdown_parser.py
src/d_data_acquisition/: acquire_data.py  alpha_vantage_news.py
tests/: test_token_controller.py  test_web_search_llm.py
